--- a/resources/sass/app.scss
+++ b/resources/sass/app.scss
@@ -17,3 +17,8 @@ $fa-font-path:"../webfonts";
 @import "~@fortawesome/fontawesome-free/scss/solid.scss";
 @import "~@fortawesome/fontawesome-free/scss/regular.scss";
 @import "~@fortawesome/fontawesome-free/scss/brands.scss";
+
+// Notificaciones
+@import '~sweetalert2/dist/sweetalert2';
+@import '~toastr/build/toastr';
+
