Se agrego el formulario de persona entidades

--- a/resources/sass/app.scss
+++ b/resources/sass/app.scss
@@ -21,4 +21,5 @@ $fa-font-path:"../webfonts";
 // Notificaciones
 @import '~sweetalert2/dist/sweetalert2';
 @import '~toastr/build/toastr';
+@import '~admin-lte/plugins/daterangepicker'
 
