Formulario para registrar establecimiento esta en un 80%, se agrego bs-stepper para boostrarp , se agrego la validacion ccon jquery validation, ademas de que tambien se realiza la validacion con laravel, para el envio de formulario se lo hace sin ajax

--- a/resources/sass/app.scss
+++ b/resources/sass/app.scss
@@ -21,5 +21,6 @@ $fa-font-path:"../webfonts";
 // Notificaciones
 @import '~sweetalert2/dist/sweetalert2';
 @import '~toastr/build/toastr';
-@import '~admin-lte/plugins/daterangepicker'
+@import '~admin-lte/plugins/daterangepicker';
+@import '~admin-lte/plugins/bs-stepper/css/bs-stepper';
 
