--- a/resources/sass/app.scss
+++ b/resources/sass/app.scss
@@ -23,4 +23,7 @@ $fa-font-path:"../webfonts";
 @import '~toastr/build/toastr';
 @import '~admin-lte/plugins/daterangepicker';
 @import '~admin-lte/plugins/bs-stepper/css/bs-stepper';
+@import '~admin-lte/plugins/datatables-bs4/css/dataTables.bootstrap4';
+@import '~admin-lte/plugins/datatables-responsive/css/responsive.bootstrap4';
+@import '~admin-lte/plugins/datatables-buttons/css/buttons.bootstrap4';
 
